...
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="12dp"
                app:layout_constraintTop_toBottomOf="@+id/enterNewPasswordEditTxt"
                app:layout_constraintHorizontal_bias="1.0" android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp" android:inputType="textPassword"/>
        <Button
                android:id="@+id/enterNewPasswordSendBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Send"
                app:layout_constraintStart_toEndOf="@+id/enterNewPasswordGoBackBtn" android:layout_marginStart="88dp"
                app:layout_constraintTop_toTopOf="@+id/enterNewPasswordGoBackBtn"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="120dp" app:layout_constraintHorizontal_bias="0.5"/>

        <Button
                android:id="@+id/enterNewPasswordGoBackBtn"
...
